# RM

./: README.md
task1/1/: CMakeLists.txt  matrix.cpp
task1/2/: CMakeLists.txt  Matrix.h  transformation.cpp
task2/1/: CMakeLists.txt
task2/1/code/: segmentation.cpp  segmentation.h
task2/2/: CMakeLists.txt
task2/2/code/: ArmorDetector.cpp  ArmorDetector.h  main.cpp
task3/1/: CMakeLists.txt  simulator.cpp
task3/2/: CMakeLists.txt
task3/2/code/: KalmanFilter.cpp  simulate.h
